# hsi2rgb

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml  uv-test.yml
core/: README.md  pyproject.toml
core/src/hsi2rgb/: __init__.py  hsi2rgb.py
core/tests/: test.py
gui/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
gui/src/hsi2rgb/: __init__.py  web.py
gui/src/hsi2rgb_gui/: hsi4viz.py  web.py
src/: hsi2rgb.py  main.py
src/hsi2rgb/: __init__.py  hsi2rgb.py  web.py
