[project]
name = "hsi2rgb-web"
version = "0.1.0"
description = "Easily convert a hyperspectral image to an RGB image."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.0",
    "gradio>=5.9.1",
    "numpy>=2.2.1",
    "scikit-image>=0.25.0",
    "scipy>=1.14.1",
    # "scikit-learn>=1.6.0",
]
