[project]
name = "hsi2rgb"
version = "0.1.0"
description = "Easily convert a hyperspectral image to an RGB image."
readme = "README.md"
authors = [
  { name = "songyz2023", email = "songyz2023dlut@outlook.com" },
]

requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 4 - Beta",
]

[project.urls]
Documentation = "https://github.com/songyz2023/hsi2rgb#readme"
Issues = "https://github.com/songyz2023/hsi2rgb/issues"
Source = "https://github.com/songyz2023/hsi2rgb"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hsi2rgb"]

[dependency-groups]
dev = [
    "fetch-houston2013>=0.5.0",
    "jax>=0.5.3",
    "matplotlib>=3.10.1",
    "torch>=2.6.0",
]


