[project]
name = "hsi2rgb-gui"
version = "1.2.0"
description = "Easily convert a hyperspectral image to an RGB image."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hsi2rgb>=0.1.0",
    "einops>=0.8.0",
    "gradio>=5.9.1",
    "numpy>=2.2.1",
    "scikit-image>=0.25.0",
    "scipy>=1.14.1",
    "matplotlib>=3.10.0",
]
license = { file = "LICENSE" }
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hsi2rgb_gui"]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.4",
]

[project.scripts]
start = "hsi2rgb_gui.web:main"


