[project]
name = "hsi2rgb-gui"
version = "1.2.2"
description = "Easily convert a hyperspectral image to an RGB image."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hsi2rgb>=0.1.0",
    "einops>=0.8.0",
    "gradio>=5.9.1",
    "numpy>=2.2.1",
    "scikit-image>=0.25.0",
    "scipy>=1.14.1",
    "matplotlib>=3.10.0",
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hsi2rgb_gui"]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.4",
]

[project.scripts]
hsi2rgb_gui = "hsi2rgb_gui.web:main"


